NavBar, Router, Fixed Bugs

--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,12 @@
     "axios": "^0.18.1",
     "bootstrap": "^4.5.0",
     "eslint-plugin-react-hooks": "^4.0.8",
+    "history": "^5.0.0",
     "lodash": "^4.17.19",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
