--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,15 @@
     "axios": "^0.18.1",
     "bootstrap": "^4.5.0",
     "eslint-plugin-react-hooks": "^4.0.8",
+    "formik": "^2.1.5",
     "history": "^5.0.0",
     "lodash": "^4.17.19",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
