--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "formik": "^2.1.5",
     "history": "^5.0.0",
     "lodash": "^4.17.19",
+    "moment": "^2.27.0",
     "pluralize": "^8.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.1",
