--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.27",
+    "multer": "^1.4.2",
     "uuid": "^8.3.0",
     "validator": "^13.1.1"
   },
