--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.27",
     "multer": "^1.4.2",
     "uuid": "^8.3.0",
