--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "eslint-plugin-react-hooks": "^4.0.8",
     "formik": "^2.1.5",
     "history": "^5.0.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.19",
     "moment": "^2.27.0",
     "pluralize": "^8.0.0",
