--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 /coverage
 
 # production
-/build
+*/build
 
 # misc
 .DS_Store
@@ -17,6 +17,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env.production
+
 
 npm-debug.log*
 yarn-debug.log*
