--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "Trivia Quiz -VeXuZ",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/app.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js"
   },
   "author": "VeXuZ Dorotan",
   "license": "ISC",
