--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.27",
     "multer": "^1.4.2",
+    "sharp": "^0.26.1",
     "uuid": "^8.3.0",
     "validator": "^13.1.1"
   },
